<resources>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="registro_link">¿No tienes cuenta? Regístrate aquí</string>
    <string name="recuperar_contrasena">¿Olvidaste tu contraseña? Da clic aquí</string>
    <string name="volver_login">¿Ya recordaste tu contraseña? Inicia sesión aquí</string>
    <string name="app_name">Gestor Proyectos</string>

    <string name="hint_nombre">Nombre completo</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_confirmar_contrasena">Confirmar contraseña</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="volver_login_desde_registro">¿Ya tienes una cuenta? Inicia sesión aquí</string>

    <string name="titulo_proyectos">Proyectos</string>
    <string name="agregar_proyecto">Agregar Proyecto</string>
    <string name="lista_proyectos">Lista de proyectos del usuario</string>

    <string name="guardar_proyecto">Guardar proyecto</string>

    <string name="nombre_actividad">Nombre de la Actividad</string>
    <string name="desc_actividad">Descripción de la actividad</string>
    <string name="fechas_actividad">2024-07-25 → 2024-07-28</string>
    <string name="estado_actividad">Estado: Planificado</string>

    <string name="desc_btn_estado">Cambiar estado</string>
    <string name="desc_btn_editar">Editar actividad</string>
    <string name="desc_btn_eliminar">Eliminar actividad</string>

    <string name="ver">Ver</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>









</resources>